@@ -1,10 +1,19 @@
 $Id$
 ===============================================================
 
+216	Luke Howard <lukeh@padl.com>
+
+	* patch from Thorsten Kukuk to avoid overwriting
+	  sockaddr storage for IPv6; use struct
+	  sockaddr_storage if available
+	* fix for BUG#157: check for __pthread_once rather
+	  than __pthread_atfork on glibc, as the latter is
+	  no longer exported
+
 215	Luke Howard <lukeh@padl.com>
 
 	* choose between using native GSS-API and putenv()
-	  for setting keytab path
+	  for setting ccache path
 	* per-map attribute mapping for attributes that
 	  appear in multiple maps
 
